# android-openal-soft

./: CMakeLists.txt
jni/OpenAL/: alc.h
jni/OpenAL/Alc/: android.c  apportable_openal_funcs.h
